feat: add version compatibility up to 1.8